// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas en <GifGrid/> Debe mostrarse correctamente 1`] = `
<Fragment>
  <h3>
    coso
  </h3>
  Loading...
  <div
    className="card-grid "
  />
</Fragment>
`;

exports[`Pruebas en <GifGrid/> debe de mostrar items cuando se cargan imágenes useFetchGifts 1`] = `
<Fragment>
  <h3>
    coso
  </h3>
  <div
    className="card-grid "
  >
    <GifGridItem
      id="ABC"
      key="ABC"
      title="Cosos"
      url="https://localhost/coso.png"
    />
  </div>
</Fragment>
`;
